--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "expo": "~54.0.23",
     "expo-av": "^16.0.7",
     "expo-constants": "~18.0.10",
-    "expo-file-system": "~19.0.17",
+    "expo-document-picker": "~14.0.7",
+    "expo-file-system": "~19.0.19",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
@@ -36,6 +37,7 @@
     "expo-linking": "~8.0.8",
     "expo-location": "~19.0.7",
     "expo-router": "~6.0.14",
+    "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
@@ -68,7 +70,8 @@
     "react-rating": "^2.0.5",
     "react-redux": "^9.2.0",
     "redux-saga": "^1.4.2",
-    "yup": "^1.7.1"
+    "yup": "^1.7.1",
+    "react-native-webview": "13.15.0"
   },
   "devDependencies": {
     "@types/immutable": "^3.8.6",
@@ -82,5 +85,4 @@
     "typescript": "~5.9.2"
   },
   "private": true
-
 }
